fix: fix problem with block shifting when table displayed

--- a/public/css/reports/style.scss
+++ b/public/css/reports/style.scss
@@ -59,11 +59,12 @@ main {
       padding-bottom: 50px;
       position: relative;
 
-      &.chart-wrapper {
-        display: block;
+      & .chart-wrapper {
+        height: 450px;
+        visibility: visible;
 
         &.hidden {
-          display: none;
+          visibility: hidden;
         }
       }
 
@@ -76,17 +77,7 @@ main {
         left: 0;
         display: none;
         animation-duration: 1.5s;
-        animation-name: appearFromLeft;
-
-        @keyframes appearFromLeft {
-          from {
-            opacity: 0;
-          }
-
-          to {
-            opacity: 1;
-          }
-        }
+        animation-name: appear;
 
         &.active {
           display: block;
@@ -94,10 +85,13 @@ main {
       }
 
       & .table-wrapper {
+        position: absolute;
+        top: 50px;
         height: 252px;
         overflow: auto;
-        margin-bottom: 38px;
         display: block;
+        animation-duration: 1.5s;
+        animation-name: appear;
 
         &.hidden {
           display: none;
@@ -190,5 +184,15 @@ main {
       width: 238px;
       align-self: flex-end;
     }
+  }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
